# OurChat

./: .gitignore  LICENSE  OurChat.pro  README.md  client.cpp  client.h  client.ui  logging.cpp  logging.h  logging.ui  msg_Format.txt  stringtool.h  tcpclient.cpp  tcpclient.h
Client/: .gitignore  CMakeLists.txt  OurChat.pro  README.md  addfriend.cpp  addfriend.h  addfriend.ui  chatlistwidget.cpp  chatlistwidget.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  client.cpp  client.h  client.ui  friendiconlabel.cpp  friendiconlabel.h  friendinfowidget.cpp  friendinfowidget.h  friendinfowidget.ui  frienditem.cpp  frienditem.h  frienditem.ui  logging.cpp  logging.h  logging.ui  main.cpp  selfinfowidget.cpp  selfinfowidget.h  selfinfowidget.ui  sendtextedit.h  src.qrc  stringtool.cpp  stringtool.h  systemmessage.cpp  systemmessage.h  systemmessage.ui  tcpclient.cpp  tcpclient.h  verificationitem.cpp  (+2 more)
Client/Adding/: addfriend.cpp  addfriend.h  systemmessage.h  systemmessage.ui  verificationitem.cpp  verificationitem.ui
Client/Chatting/: chatlistwidget.cpp  chatwindow.cpp  chatwindow.h  chatwindow.ui  emojiselector.cpp  emojiselector.h
Client/IconSetting/: iconselect.cpp  iconselect.h  iconselect.ui
Client/Rewriting/: friendiconlabel.cpp  friendiconlabel.h  frienditem.cpp  frienditem.h  frienditem.ui  sendtextedit.cpp  sendtextedit.h  smoothscrolllistwidget.cpp  smoothscrolllistwidget.h
Client/Tools/: imagepreview.cpp  imagepreview.h  imagepreview.ui  inputdialog.cpp  inputdialog.h  stringtool.cpp  stringtool.h  tcpclient.cpp  tcpclient.h
easyloggingpp/: BUILD.gn
server/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  README.md  chatTask.cpp  chatTask.h  common.cpp  common.h  infos.h  main.cpp  makefile  server  session.cpp  session.h  table_create.txt  user.db
server/dao/: CallbacksHandler.cpp  CallbacksHandler.h  DBHandler.cpp  DBHandler.h
